// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2;

option csharp_namespace = "Com.Daml.Ledger.Api.V2";
option java_outer_classname = "PackageServiceOuterClass";
option java_package = "com.daml.ledger.api.v2";

message ListPackagesResponse {
  // The IDs of all Daml-LF packages supported by the server.
  // Each element must be a valid PackageIdString (as described in ``value.proto``).
  // Required
  repeated string package_ids = 1;
}

message GetPackageResponse {
  // The hash function we use to calculate the hash.
  // Required
  HashFunction hash_function = 1;

  // Contains a ``daml_lf`` ArchivePayload. See further details in ``daml_lf.proto``.
  // Required
  bytes archive_payload = 2;

  // The hash of the archive payload, can also used as a ``package_id``.
  // Must be a valid PackageIdString (as described in ``value.proto``).
  // Required
  string hash = 3;
}

message GetPackageStatusResponse {
  // The status of the package.
  PackageStatus package_status = 1;
}

enum PackageStatus {
  // The server is not aware of such a package.
  PACKAGE_STATUS_UNSPECIFIED = 0;

  // The server is able to execute Daml commands operating on this package.
  PACKAGE_STATUS_REGISTERED = 1;
}

enum HashFunction {
  HASH_FUNCTION_UNSPECIFIED = 0;
  HASH_FUNCTION_SHA256 = 1;
}

// Allows clients to query the Daml-LF packages that are supported by the server.
service PackageService {
  // Returns the identifiers of all supported packages.
  rpc ListPackages(ListPackagesRequest) returns (ListPackagesResponse);

  // Returns the contents of a single package.
  rpc GetPackage(GetPackageRequest) returns (GetPackageResponse);

  // Returns the status of a single package.
  rpc GetPackageStatus(GetPackageStatusRequest) returns (GetPackageStatusResponse);
}

message ListPackagesRequest {}

message GetPackageRequest {
  // The ID of the requested package.
  // Must be a valid PackageIdString (as described in ``value.proto``).
  // Required
  string package_id = 1;
}

message GetPackageStatusRequest {
  // The ID of the requested package.
  // Must be a valid PackageIdString (as described in ``value.proto``).
  // Required
  string package_id = 1;
}
